Repair lambda params